# aoc-2023

./: .gitignore  README.md  file_utils.h
01/: 01  01.cpp
02/: 02.cpp
03/: 03.cpp
04/: 04.cpp
05/: 05.cpp  utils.h
06/: 06.cpp
07/: 07.cpp  utils.h
08/: 08.cpp  node.h
09/: 09.cpp
10/: 10.cpp
11/: 11.cpp
12/: 12.cpp  spring_arrangement.h
13/: 13.cpp
14/: CMakeLists.txt  main.cpp
15/: main.cpp
16/: main.cpp
17/: CMakeLists.txt  main.cpp  node.h
